Minor version bump for query-related LOC reduction and ensure cached entities for CMDT field-definitions are updated when object changes

--- a/rollup/main/default/classes/RollupTests.cls
+++ b/rollup/main/default/classes/RollupTests.cls
@@ -1625,7 +1625,7 @@ private class RollupTests {
     System.assertEquals('Field: BillingAddress of type: ADDRESS specified invalid for rollup operation', ex.getMessage());
   }
 
-  /** CDC trigger tests */
+  /** CDC trigger tests - TODO: separate test suite to provide code coverage for the usage of custom fields as Field Definitions within Rollup__mdt */
 
   @isTest
   static void shouldWorkForChangeDataEventCaptureTriggersOnCreate() {
